# wave-data-Polkadot

./: readme.md
wavedata/: package-lock.json  package.json  sample.txt
wavedata-api/: next.config.js  package-lock.json  package.json
wavedata-api/contract/: getContract.js  useContract.ts
wavedata-api/contract/ink_contracts/: metadata.json
wavedata-api/pages/api/GET/: Test.js  checkEmail.js  getFhir.js  getUserDetails.js
wavedata-api/pages/api/GET/Trial/: GetAvailableTrial.js  GetOngoingTrial.js  getTrials.js
wavedata-api/pages/api/GET/Trial/Survey/: GetSurveyDetails.js
wavedata-api/pages/api/GET/Wearable/: getDevices.js  getSourceLink.js
wavedata-api/pages/api/POST/: Login.js  Register.js  UpadateFhir.js  UpadateImage.js
wavedata-api/pages/api/POST/Trial/: CreateOngoingTrail.js
wavedata-api/pages/api/POST/Trial/Survey/: CreateCompletedSurvey.js  CreateSurveyAnswers.js
wavedata-app/lib/components/: register_modal.dart
wavedata-app/lib/screens/: auth_screen.dart  connect_data.dart  main_screen.dart  questionnaire_screen.dart  wearables_screen.dart
wavedata/src/components/modal/: CrateSurvey.jsx  CrateTrial.jsx  UpdateSurvey.jsx  UpdateTrial.jsx  ViewControbutiors.jsx
wavedata/src/ink_contracts/wavedata/: .gitignore  Cargo.toml  build.bash  build.sh  lib.rs
wavedata/src/pages/: LogIn.js  Payment.js  Register.js  SurveyDetails.js  TrialDetails.js  Trials.js
wavedata/src/pages/ResetAll/: index.js
wavedata/src/services/: getContract.js  useContract.js
