[package]
name = "wavedata"
version = "0.1.0"
authors = ["MD Baha Uddin <baharnicesoftware@gmail.com>"]
edition = "2021"

[dependencies]
codec = "0.0.0"
ink = { version = "4.0.0-beta", default-features = false }
scale = { package = "parity-scale-codec", version = "3.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.0.0-rc",  default-features = false }

[lib]
name = "wavedata"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []

[build]
target = "wasm32-unknown-unknown"